--- a/style.css
+++ b/style.css
@@ -6,14 +6,15 @@ body {
 }
 
 .container {
-    width: 50%;
-    margin: 0 auto;
-    padding: 20px;
+    width: 75%; 
+    margin: 20px auto; 
+    padding: 40px;
     border: 1px solid #444;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     background-color: #333;
 }
+
 
 .form-group {
     margin-bottom: 15px;
@@ -36,7 +37,13 @@ body {
     background-color: #444;
     color: #ffffff;
     font-family: 'Arial', sans-serif;
-    font-size: 16px;
+    font-size: 18px;
+}
+
+.form-group textarea {
+    max-width: 100%;
+    min-width: 100%;
+    min-height: 100px;
 }
 
 .form-group input[type="color"] {
@@ -46,14 +53,14 @@ body {
 }
 
 .form-group button {
-    padding: 10px 15px;
+    padding: 15px 20px;
     background-color: #28a745;
     border: none;
     color: white;
     cursor: pointer;
     border-radius: 5px;
     font-family: 'Arial', sans-serif;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .form-group button:hover {
@@ -108,4 +115,11 @@ body {
 
 .record-item button:last-child:hover {
     background-color: #c82333;
+}
+
+@media (max-width: 768px) {
+    .container {
+        width: 95%;
+        padding: 20px;
+    }
 }
